--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/IMG_0400.JPG"
-" class="img-fluid" alt="">
+          <img src="assets/img/photo.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic developer with a keen interest in software development . By comprehensive exposure
@@ -123,7 +122,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 27 March 2000</li>
+                <li><i class="icofont-rounded-right">=</i> <strong>Birthday:</strong> 27 March 2000</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 6303712238</li>
               </ul>
             </div>
@@ -437,7 +436,7 @@
             <div class="portfolio-info">
               
               <div class="portfolio-links">
-                <a href="projects/face_recognization.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
+                <a href="projects/Data Analysis by Web Scraping.html" data-gall="portfolioDetailsGallery" data-vbtype="iframe" class="venobox" title="Project Details"><i class="bx bx-info-circle"></i></a>
               </div>
             </div>
           </div>
