--- a/projects/university webpage.html
+++ b/projects/university webpage.html
@@ -47,10 +47,9 @@
 
             <ul>
               <li><strong>Tech Stack</strong>: Html ,CSS ,Javascript</li>
-              <li><strong>Github URL</strong>: <a href="https://github.com/R-TharunReddy/university-website-outlook"
+              <li><strong>Github URL</strong>: <a href="https://kanikebhanuprakash.github.io/university_website/"
                   target="_blank">Project Link</a></li>
-              <li><strong>Demolink</strong>: <a href="https://reddys-university-website.herokuapp.com/" target="_blank">click for
-                  Demo</a></li>
+              
             </ul>
 
             <p>
