--- a/projects/Data Analysis by Web Scraping.html
+++ b/projects/Data Analysis by Web Scraping.html
@@ -2,7 +2,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
   
-    <title>Movie Recommender</title>
+    <title>Data Analysis by Web Scraping</title>
     <meta content="" name="descriptison">
     <meta content="" name="keywords">
   
@@ -43,18 +43,18 @@
   
             <div class="col-lg-12 portfolio-info">
               <br>
-              <h2 style="color:#12d640">Movie Recommender</h2>
+              <h2 style="color:#12d640">Data Analysis by Web Scraping</h2>
               <ul>
-                <li><strong>Tech Stack</strong>: Django, HTML, CSS, JavaScript, Bootstrap, SQLite, Pandas, AWS S3, Heroku</li>
-                <li><strong>Website URL</strong>: <a href="https://movierecommendersystem-vamsi.herokuapp.coma/" target="_blank">Link</a></li>
-                <li><strong>Github URL</strong>: <a href="https://github.com/vamsibhogaraju/Movie-Recommendation-System-Cosine-Similarity" target="_blank">Project Link</a></li>
+                <li><strong>Tech Stack</strong>:python, HTML, CSS, Bootstrap</li>
+               
               </ul>
   
               <p>
-                Django based movie recommender system. I have used collaborative filtering technique to recommend movies to the users.             
+                The standard information investigation combines qualitative & quantitative analysis using Python for data extrapolation.             
               </p>
               <p>
-                User can register/login to the web app. Search through different movies and explore them. User can get movie recommendations based on the ratings he/she gives to the movie. User can add movies to their watch list.              
+                Web scraping involves identifying links,extracting data, and saving it to a CSV file, with Python being the preferred language due to its resources and coding elegance .
+
               </p>
             </div>
   
